@@ -36,6 +36,7 @@
             </ul>
         </div>
     </div>
+    <div data-a11y-result-outline-container></div>
 </template>
 <wagtail-userbar></wagtail-userbar>
 <script src="{% versioned_static 'wagtailadmin/js/vendor.js' %}"></script>
